--- a/.github/workflows/show-me.yml
+++ b/.github/workflows/show-me.yml
@@ -25,7 +25,8 @@ permissions:
 
 jobs:
   build:
-    name: "${{ matrix.python-version }} on ${{ matrix.os }}"
+    name: >-
+      ${{ matrix.python-version }} on ${{ matrix.os }}
     runs-on: "${{ matrix.os }}-latest"
     strategy:
       matrix:
@@ -40,9 +41,12 @@ jobs:
           - "3.12"
           - "3.13"
       fail-fast: false
+    permissions:
+      id-token: write
     steps:
     - id: prepare-config-settings
-      name: "Build Plugin parameters"
+      name: >-
+        Build Plugin parameters
       uses: 'msftcangoblowm/drain-swamp-action@v1'
       with:
         plugin_parameters: '{"set-lock": "1", "kind": "current"}'
@@ -50,12 +54,12 @@ jobs:
         cache: true
         python_version: "${{ matrix.python-version }}"
 
-   # One artifact -- a toml file
+    # One artifact -- a toml file
     - name: "Download artifact"
       uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
       with:
         name: config-settings-toml-file
-        path: ${{ step.prepare-config-settings.outputs.ds_config_settings }}
+        path: ${{ steps.prepare-config-settings.outputs.ds_config_settings }}
 
     - name: "What did we get?"
       run: |
@@ -64,7 +68,7 @@ jobs:
     # If using tox, install requirements for tox and tox-gh
     - name: "Build package"
       env:
-        DS_CONFIG_SETTINGS: ${{ step.prepare-config-settings.outputs.ds_config_settings }}
+        DS_CONFIG_SETTINGS: ${{ steps.prepare-config-settings.outputs.ds_config_settings }}
       run: |
         echo "python -m build (or tox -e build) would go here"
         # python -m build
