--- a/action.yml
+++ b/action.yml
@@ -73,12 +73,12 @@ runs:
         mkdir -p ${{ runner.temp }}/ ||:
 
     - name: Set script executable -- MacOS or Linux
-      if: ${{ !contains(matrix.os, "windows") }}
+      if: ${{ !startsWith(matrix.os, "windows") }}
       shell: bash
       run: chmod +x ${{ github.action_path }}/main.sh
 
     - name: Set script executable -- Windows
-      if: ${{ contains(matrix.os, "windows") }}
+      if: ${{ startsWith(matrix.os, "windows") }}
       shell: bash
       run: git update-index --chmod=+x ${{ github.action_path }}/main.sh
 
