--- a/action.yml
+++ b/action.yml
@@ -105,7 +105,7 @@ runs:
     - name: Upload artifact -- toml file
       uses: actions/upload-artifact@v4
       with:
-        name: TOML file
+        name: config-settings-toml-file
         path: ${{ steps.outcome.outputs.ds_config_settings }}
 
 ...
