archive name append more attributes
- fix(action): archive name append matrix.os and version

--- a/action.yml
+++ b/action.yml
@@ -105,7 +105,7 @@ runs:
     - name: Upload artifact -- toml file
       uses: actions/upload-artifact@v4
       with:
-        name: config-settings-toml-file
+        name: config-settings-toml-file-${{ matrix.os }}-${{ matrix.version }}
         path: ${{ steps.outcome.outputs.ds_config_settings }}
 
 ...
