--- a/.github/workflows/show-me.yml
+++ b/.github/workflows/show-me.yml
@@ -58,7 +58,7 @@ jobs:
     - name: "Download artifact"
       uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
       with:
-        name: config-settings-toml-file
+        name: config-settings-toml-file-${{ matrix.os }}-${{ matrix.version }}
         path: ${{ steps.prepare-config-settings.outputs.ds_config_settings }}
 
     - name: "What did we get?"
