--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -39,7 +39,7 @@ repos:
     hooks:
     - id: mypy
       pass_filenames: false
-      entry: mypy src/
+      entry: mypy .
 
   - repo: https://github.com/econchick/interrogate
     rev: 1.7.0  # or master if you're bold
