--- a/action.yml
+++ b/action.yml
@@ -54,6 +54,23 @@ runs:
       uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
       if: ${{ inputs.checkout == 'true' && inputs.cache == 'false' }}
 
+    - name: Setup python
+      uses: actions/setup-python@f677139bbe7f9c59b41e40162b753c062f5d49a3 # v5.2.0
+      if: ${{ inputs.cache == 'true' }}
+      with:
+        python-version: ${{ inputs.python_version }}
+        allow-prereleases: true
+        # cache: pip
+        # cache-dependency-path: |
+        #   requirements.txt
+
+    - name: Setup python
+      uses: actions/setup-python@f677139bbe7f9c59b41e40162b753c062f5d49a3 # v5.2.0
+      if: ${{ inputs.cache == 'false' }}
+      with:
+        allow-prereleases: true
+        python-version: ${{ inputs.python_version }}
+
     # Writes to GITHUB_ENV file. In other steps env.TO_TOML and env.MAIN_SH will be available
     - name: Set paths
       shell: bash
@@ -90,27 +107,9 @@ runs:
         echo -e 'temp folder: ${{ runner.temp }} This path is available in environment variable, DS_CONFIG_SETTINGS'
         mkdir -p ${{ runner.temp }} ||:
 
-    - name: Setup python
-      uses: actions/setup-python@f677139bbe7f9c59b41e40162b753c062f5d49a3 # v5.2.0
-      if: ${{ inputs.cache == 'true' }}
-      with:
-        python-version: ${{ inputs.python_version }}
-        allow-prereleases: true
-        # cache: pip
-        # cache-dependency-path: |
-        #   requirements.txt
-
-    - name: Setup python
-      uses: actions/setup-python@f677139bbe7f9c59b41e40162b753c062f5d49a3 # v5.2.0
-      if: ${{ inputs.cache == 'false' }}
-      with:
-        allow-prereleases: true
-        python-version: ${{ inputs.python_version }}
-
     - id: outcome_win
       if: startsWith(matrix.os, 'windows')
-      name: >-
-        Prepare build backend plugin parameters
+      name: Prepare build backend plugin parameters
       env:
         # See https://github.com/actions/runner/issues/665
         # https://docs.github.com/en/actions/writing-workflows/choosing-what-your-workflow-does/accessing-contextual-information-about-workflow-runs#example-usage-of-the-runner-context
@@ -123,8 +122,7 @@ runs:
 
     - id: outcome_other
       if: ${{ ! startsWith(matrix.os, 'windows') }}
-      name: >-
-        Prepare build backend plugin parameters
+      name: Prepare build backend plugin parameters
       env:
         # See https://github.com/actions/runner/issues/665
         # https://docs.github.com/en/actions/writing-workflows/choosing-what-your-workflow-does/accessing-contextual-information-about-workflow-runs#example-usage-of-the-runner-context
