--- a/action.yml
+++ b/action.yml
@@ -64,18 +64,23 @@ runs:
         #   requirements.txt
 
     # Writes to GITHUB_ENV file. In other steps env.TO_TOML and env.MAIN_SH will be available
-    - name: Set paths
+    - name: Set paths -- MacOS or Linux
+      if: ${{ ! startsWith(matrix.os, 'windows') }}
       shell: bash
       run: |
-        python gh_joinpath.py --name="TO_TOML" "src" "to_toml.py"
-        # python gh_joinpath.py --name="MAIN_SH" "main.sh"
+        python ${{ github.action_path }}/gh_joinpath.py --name="TO_TOML" "src" "to_toml.py"
+
+    - name: Set paths -- Windows
+      if: startsWith(matrix.os, 'windows')
+      shell: bash
+      run: |
+        python ${{ github.action_path }}\\gh_joinpath.py --name="TO_TOML" "src" "to_toml.py"
 
     - name: Set script executable -- MacOS or Linux
       if: ${{ ! startsWith(matrix.os, 'windows') }}
       shell: bash
       run: |
         set -xe
-        # chmod +x ${{ env.MAIN_SH }}
         chmod +x ${{ env.TO_TOML }}
 
     - name: Set script executable -- Windows
@@ -83,7 +88,6 @@ runs:
       shell: bash
       run: |
         set -xe
-        # git update-index --chmod=+x '${{ env.MAIN_SH }}'
         git update-index --chmod=+x '${{ env.TO_TOML }}'
 
     - name: Prepare temp folder
