--- a/.github/workflows/show-me.yml
+++ b/.github/workflows/show-me.yml
@@ -69,7 +69,7 @@ jobs:
       with:
         plugin_parameters: '{"set-lock": "1", "kind": "current"}'
         checkout: true
-        cache: true
+        fetch_tags: true
         python_version: "${{ matrix.python-version }}"
 
     - name: "What did we get?"
